# channels_postgres

./: .gitignore  .release-it.json  Pipfile  README.md  codecov.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: coverage_main_branch.yml  create_tag.yml  python-publish.yml  release.yml  shared-tests.yml  test_artifact_download.yml  tests.yml
.github/workflows/shared/: tests.yml
channels_postgres/: apps.py  core.py  db.py  models.py
channels_postgres/migrations/: 0001_initial.py  0002_create_triggers_and_functions.py  0003_notify_smaller_payload.py  0004_notify_ensure_payload_not_too_big.py
tests/: settings.py  test_core.py
